tests/parsing/smtlib/v2.7/errors/045_index_list_unclosed_1.smt2
(set-logic ALL)
(assert (_ foo bar _))
